test/expected/regression-http-parser.txt
/scripts/regression-http-parser.js:25
      throw new Error('trace');
      ^

Error: trace
    at Socket.res.socket._read (/scripts/regression-http-parser.js:25:13)
    at ____________________:0:0
    at Server.<anonymous> (/scripts/regression-http-parser.js:16:8)
    at ____________________:0:0
    at ____________________:0:0
    at ____________________:0:0
    at Object.<anonymous> (/scripts/regression-http-parser.js:14:8)
